<resources>
    <string name="app_name">消防终端-指挥</string>
    <string name="app_name_en">TBC_BaiduNavi</string>
    <string name="text_index_page">警情</string>
    <string name="text_contact_list">通讯录</string>
    <string name="text_rescue_disposal">联动处置</string>
    <string name="text_my_page">我</string>

    <string name="login_app_name">指&#160;挥&#160;终&#160;端</string>
    <string name="btn_scan_code_text">扫码连接服务器</string>
    <string name="internet_hint">提示</string>

    <string name="input_username">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="btn_login">登  录</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="no_account_to_register">没有账号? 点击注册</string>

    <!--SimpleRxSubscriber类中需要的-->
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_system_unsupport_method">系统不支持的请求方法。</string>
    <string name="scan_hint">扫码连接服务器</string>
    <string name="scan_hint1">将二维码放入框内，即可自动扫码</string>
    <string name="scan_title1">扫一扫</string>
    <string name="scan_photo">相册</string>

    <!-- 注册页面 -->
    <string name="register_dailog">注册中...</string>
    <string name="register_titlebar">用户注册</string>
    <string name="register_phone_hint">请输入手机号码</string>
    <string name="register_phone_null">手机号码不能为空</string>
    <string name="register_phone_error">手机号码格式不对</string>
    <string name="register_name_null">姓名不能为空</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_password_last_hint">请再次输入密码</string>
    <string name="register_pwd_null">密码不能为空</string>
    <string name="register_last_pwd_null">确认密码不能为空</string>
    <string name="register_pwd_error">两次输入的密码不匹配</string>
    <string name="register_verify_hint">请输入验证码</string>
    <string name="register_getverify_button">获取验证码</string>
    <string name="register_next_button">注册</string>
    <string name="register_text_success">注册成功</string>
    <string name="register_text_fail">注册失败</string>
    <string name="register_pwd_length_error">密码长度应该在6-16位之间</string>
    <string name="text_index_page_closed">已结案</string>
    <string name="text_index_page_unclosed">未结案</string>
    <string name="text_index_page_fire">火灾扑救</string>
    <string name="text_index_page_fire_rescue">抢险救援</string>
    <string name="text_index_page_social_rescue">社会救助</string>

    <string name="label_key_word">关键字：</string>
    <string name="hint_key_word">请输入关键字（警情地址）</string>
    <string name="hint_danger_name">请输入危化品名称</string>
    <string name="hint_unit_name">请输入重点单位名称</string>
    <string name="hint_policy_gui_fan_name">请输入名称</string>
    <string name="hint_policy_example_name">请输入名称</string>
    <string name="hint_nine_place_name">请输入九小场所名称</string>
    <string name="hint_unit_search">查询</string>
    <string name="btn_select_more">更多筛选</string>

    <string name="label_start_and_end_time">起止时间：</string>
    <string name="label_alarm_type">报警分类：</string>
    <string name="label_alarm_state">警情状态：</string>
    <string name="label_alarm_state_all">全部</string>


    <string name="chatfooter_presstorcd">按住 说话</string>
    <string name="chatfooter_release_send">松开 发送</string>
    <string name="chatfooter_too_short">录音时间太短</string>
    <string name="chatfooter_cancel_rcd">上滑 取消</string>
    <string name="chatfooter_cancel_rcd_release">松开 取消</string>
    <string name="media_no_memory">储存卡存储空间不足</string>
    <string name="media_ejected">储存卡已拔出，语音功能将暂时不可用</string>


    <!--腾讯云实时音视频要使用-->
    <string name="str_tag_pos">POS</string>
    <string name="decline">拒绝</string>
    <string name="answer">接听</string>
    <string name="im_more_audio_call_string">语音通话</string>
    <string name="im_more_video_call_string">视频通话</string>

    <!--商米打印设备-->
    <string name="toast_2">服务已断开!</string>
</resources>
