<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.telewave.battlecommand.view.ClearAutoCompleteTextView
                android:id="@+id/user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/login_edit_bg_color"
                android:drawableLeft="@mipmap/login_user_icon"
                android:drawablePadding="@dimen/padding"
                android:hint="@string/input_username"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/user_password"
                android:padding="@dimen/login_edit_padding"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/login_edit_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text" />

            <com.telewave.battlecommand.view.ClearEditText
                android:id="@id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:background="@color/login_edit_bg_color"
                android:drawableLeft="@mipmap/login_password_icon"
                android:drawablePadding="@dimen/padding"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:padding="@dimen/login_edit_padding"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/login_edit_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_auto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/auto_login"
                    android:textColor="@color/login_auto_login_text_color"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/forget_password"
                    android:textColor="@color/login_forget_password_text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn_bg"
                android:gravity="center"
                android:text="@string/btn_login"
                android:textColor="@color/top_bar"
                android:textSize="@dimen/tittle" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/no_account_to_register"
                android:textColor="@color/login_register_text_color"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="vertical" />
    </LinearLayout>
</LinearLayout>

