<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (c) 2013 The CCP project authors. All Rights Reserved.
 
   Use of this source code is governed by a Beijing Speedtong Information Technology Co.,Ltd license
   that can be found in the LICENSE file in the root of the web site.
 
    				http://www.yuntongxun.com
 
   An additional intellectual property rights grant can be found
   in the file PATENTS.  All contributing project authors may
   be found in the AUTHORS file in the root of the source tree.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <FrameLayout
        android:id="@+id/voice_rcd_hint_rcding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/voice_rcd_hint_anim_area"
            android:orientation="vertical"
            android:background="@drawable/voice_rcd_hint_bg"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0.0dp"
                android:layout_weight="8"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/voice_rcd_hint" />

                <com.telewave.battlecommand.view.ChatVoiceRecordingAnimView
                    android:id="@+id/voice_rcd_hint_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView1"
                    android:layout_toRightOf="@+id/imageView1"
                    android:src="@mipmap/amp1" />

            </RelativeLayout>

            <TextView
                android:id="@+id/voice_rcd_normal_wording"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_below="@+id/imageView1"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/chatfooter_cancel_rcd"
                android:textColor="@color/white"
                android:textSize="12.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/voice_rcd_hint_cancel_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/voice_rcd_hint_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/voice_rcd_hint_cancel_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:src="@mipmap/rcd_cancel_icon" />

            <TextView
                android:id="@+id/voice_rcd_hint_cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_below="@+id/voice_rcd_hint_cancel_icon"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/chatfooter_cancel_rcd_release"
                android:textColor="@color/white"
                android:textSize="12.0dip" />
            <!--android:background="@drawable/rcd_cancel_bg"-->
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/voice_rcd_hint_tooshort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/voice_rcd_hint_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:src="@mipmap/voice_to_short" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/chatfooter_too_short"
            android:textColor="@color/white"
            android:textSize="12.0dip" />
    </LinearLayout>

</LinearLayout>